sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var switch:Boolean=true

	while(switch){
    switch=false
    for(i<- 1 to getNombreValeurs()-(i+1)){
      if (plusPetit(i,i-1)){
        echange(i,i-1)
        switch=true
      }
      if (!switch){return}
    }
  }
   
}